--- a/test/Eventitus-runner.html
+++ b/test/Eventitus-runner.html
@@ -1,18 +1,17 @@
-<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"
-  "http://www.w3.org/TR/html4/loose.dtd">
+<!DOCTYPE HTML>
 <html>
 <head>
-  <title>Eventus</title>
+  <title>Eventitus</title>
   <link rel="shortcut icon" type="image/png" href="../jasmine/jasmine_favicon.png" />
   <link rel="stylesheet" type="text/css" href="../jasmine/jasmine.css" />
   <script type="text/javascript" src="../jasmine/jasmine.js"></script>
   <script type="text/javascript" src="../jasmine/jasmine-html.js"></script>
   <!-- Source -->
-  <script type="text/javascript" src="../src/Eventus.js"></script>
+  <script type="text/javascript" src="../src/Eventitus.js"></script>
 </head>
-
-<body>	  
-	<script type="text/javascript" src="Eventus-spec.js"></script>
+<body>	
+  <h1>Eventitus</h1>  
+	<script type="text/javascript" src="Eventitus-spec.js"></script>
 	<script type="text/javascript">
 		jasmine.getEnv().addReporter(new jasmine.TrivialReporter());
 		jasmine.getEnv().execute();
